--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,9 @@
 [aliases]
 test=pytest
 
+[tool:pytest]
+testpaths = innerscope/tests
+
 [flake8]
 max-line-length = 100
 exclude =
@@ -20,3 +23,11 @@ exclude_lines =
 
     raise AssertionError
     raise NotImplementedError
+
+[versioneer]
+VCS = git
+style = pep440
+versionfile_source = innerscope/_version.py
+versionfile_build = innerscope/_version.py
+tag_prefix =
+parentdir_prefix = innerscope-
