--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,9 @@ testpaths = innerscope/tests
 [flake8]
 max-line-length = 100
 exclude =
-    innerscope/tests/
+    versioneer.py,
+    innerscope/tests/,
+    build/
 ignore =
     E203,   # whitespace before ':'
     E231,   # Multiple spaces around ","
@@ -15,6 +17,8 @@ ignore =
 
 [coverage:run]
 source = innerscope
+omit =
+    innerscope/_version.py
 
 [coverage:report]
 # Regexes for lines to exclude from consideration
