--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ python:
     - 3.7
     - 3.8
     - "3.9-dev"
+    - "pypy3"
+    - "pypy3.6"
 
 install:
     - pip install toolz coverage pytest flake8 black
