--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,7 @@ python:
     - 3.7
     - 3.8
     - "3.9-dev"
-    - "pypy3"
-    - "pypy3.6"
+    - "pypy3.6-7.1.3"
 
 install:
     - pip install toolz coverage pytest flake8 black
