--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,12 @@
-sudo: false
 language: python
 os: linux
-dist: xenial
 
 python:
     - 3.6
     - 3.7
     - 3.8
     - "3.9-dev"
+    - "pypy3.6-7.1.1"
     - "pypy3.6-7.1.3"
 
 install:
