--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ python:
     - 3.8
     - "3.9-dev"
     - "pypy3.6-7.1.1"
-    - "pypy3.6-7.1.3"
 
 install:
+    - pip install --upgrade pip
     - pip install toolz coverage pytest flake8 black
     - pip install -e .
 
