--- a/.travis.yml
+++ b/.travis.yml
@@ -10,15 +10,16 @@ python:
 
 install:
     - pip install --upgrade pip
-    - pip install toolz coverage pytest flake8 black
+    - pip install toolz coverage pytest
     - pip install -e .
 
 script:
     - coverage run --branch -m pytest --doctest-modules --method bytecode
     - coverage run -a --branch -m pytest --doctest-modules --method trace
     - pytest --doctest-modules --method trace
-    - flake8
-    - black innerscope --check --diff
+    - if [[ $TRAVIS_PYTHON_VERSION != pypy* ]] ; then pip install flake8 black ; fi
+    - if [[ $TRAVIS_PYTHON_VERSION != pypy* ]] ; then flake8 ; fi
+    - if [[ $TRAVIS_PYTHON_VERSION != pypy* ]] ; then black innerscope --check --diff ; fi
 
 after_success:
     - coverage report --show-missing
