--- a/.github/workflows/test_pip.yml
+++ b/.github/workflows/test_pip.yml
@@ -55,3 +55,4 @@ jobs:
         uses: coverallsapp/github-action@master
         with:
           github-token: ${{ secrets.github_token }}
+          parallel-finished: true
