--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,12 @@ exclude_lines =
     raise AssertionError
     raise NotImplementedError
 
+ignore_errors = True
+precision = 1
+fail_under = 0
+skip_covered = True
+skip_empty = True
+
 [versioneer]
 VCS = git
 style = pep440
