Add support for Python 3.11

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,10 +10,8 @@ exclude =
     versioneer.py,
     innerscope/tests/,
     build/
-ignore =
-    E203,   # whitespace before ':'
-    E231,   # Multiple spaces around ","
-    W503,   # line break before binary operator
+extend-ignore =
+    E203,
 
 [isort]
 sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
