--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
+    if: github.repository == 'eriknw/innerscope'
     defaults:
       run:
         shell: bash -l {0}
@@ -16,17 +17,26 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: Create env
-        uses: conda-incubator/setup-miniconda@v2
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          auto-update-conda: true
-          python-version: 3.9
-      - name: Build wheel
-        if: contains(github.ref, 'refs/tags/')
-        run: python setup.py sdist bdist_wheel
+          python-version: "3.8"
+      - name: Install build dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install build setuptools twine
+      - name: Build wheel and sdist
+        run: python -m build --sdist --wheel
+      - uses: actions/upload-artifact@v3
+        with:
+          name: releases
+          path: dist
+          if-no-files-found: error
+      - name: Check with twine
+        run: python -m twine check --strict dist/*
       - name: Publish to PyPI
         if: contains(github.ref, 'refs/tags/')
-        uses: pypa/gh-action-pypi-publish@master
+        uses: pypa/gh-action-pypi-publish@v1.8.6
         with:
           user: __token__
           password: ${{ secrets.PYPI_TOKEN }}
