--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,6 @@
+recursive-include innerscope *.py
 include setup.py
+include conftest.py
 include README.md
 include LICENSE
 include MANIFEST.in
-include versioneer.py
-include innerscope/_version.py
