--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install build dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install build setuptools twine
+          python -m pip install build twine
       - name: Build wheel and sdist
         run: python -m build --sdist --wheel
       - uses: actions/upload-artifact@v3
