--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,7 @@
 # To run: `pre-commit run --all-files`
 # To update: `pre-commit autoupdate`
 #  - &flake8_dependencies below needs updated manually
+# To ignore: `git commit --no-verify`
 #
 # Be careful about linting that rewrites code syntax we want to test.
 ci:
@@ -21,7 +22,6 @@ repos:
       - id: check-added-large-files
       - id: check-case-conflict
       - id: check-merge-conflict
-      # - id: check-symlinks
       - id: check-ast
       - id: check-toml
       - id: check-yaml
@@ -56,7 +56,6 @@ repos:
     rev: 23.3.0
     hooks:
       - id: black
-      # - id: black-jupyter
   # - repo: https://github.com/charliermarsh/ruff-pre-commit
   #   rev: v0.0.272
   #   hooks:
