--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3 :: Only",
     "Programming Language :: Python :: Implementation :: CPython",
     "Programming Language :: Python :: Implementation :: PyPy",
@@ -70,7 +71,7 @@ dirty_template = "{tag}+{ccount}.g{sha}.dirty"
 
 [tool.black]
 line-length = 100
-target-version = ["py38", "py39", "py310", "py311"]
+target-version = ["py38", "py39", "py310", "py311", "py312"]
 
 [tool.isort]
 sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
@@ -112,9 +113,14 @@ exclude_lines = [
 ]
 
 [tool.ruff]
-# https://github.com/charliermarsh/ruff/
+# https://github.com/astral-sh/ruff/
 line-length = 100
 target-version = "py38"
+[tool.ruff.lint]
+unfixable = [
+    "F841",  # unused-variable (Note: can leave useless expression)
+    "B905",  # zip-without-explicit-strict (Note: prefer `zip(x, y, strict=True)`)
+]
 select = [
     "ALL",
 ]
@@ -171,7 +177,7 @@ ignore = [
     "PD",  # pandas-vet (Intended for scripts that use pandas, not libraries)
 ]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]  # Allow unused imports (w/o defining `__all__`)
 "innerscope/tests/*py" = [
     "S101", "S301", "T201", "D103", "D100",  # Allow assert, print, pickle, and no docstring
@@ -179,6 +185,6 @@ ignore = [
 ]
 "innerscope/tests/test_repr.py" = ["E501"]
 
-[tool.ruff.flake8-pytest-style]
+[tool.ruff.lint.flake8-pytest-style]
 fixture-parentheses = false
 mark-parentheses = false
